# PixivVault-for-Mac

./: .gitignore  FEATURES.md  JULES_PROMPT.md  MAC_PORTING.md  README.md  build_macos.sh  core.py  database.py  epub_builder.py  gui.py  implementation_plan.md  main.py  main.spec  notifications.py  pixiv_client.py  pyproject.toml  registry_helper.py  release_description.md  requirements.txt  scheduler.py  server.py  tray.py
assets/: icon.icns
docs/: implementation_plan.md  walkthrough.md
extension/: background.js  content.js  manifest.json  style.css
